TWC3119-926: LNAV - Fix CSS change for scrollbar displaying when empty (#2829)

--- a/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
@@ -568,7 +568,7 @@ button.btn.btn-sm.btn-primary.lnavaddbtnstyle {
     position: absolute;
     height: calc(100% - 100px) !important;
     overflow-x: auto;
-    overflow-y: scroll !important;
+    overflow-y: overlay !important;
 }
 
 i.intelicon-vertical-menu.blue_b_fix {
